large update: cancel order method implementation, organizing the source code - separating and grouping services

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,7 @@
-Simple REST API for managing Wapro Mag orders.
+# MAG_API
 
-(Working beta version soon...)
+Simple REST Api for placing orders in Wapro Mag without knowledge of SQL procedures or database schema.
+
+All you have to do is prepare JSON request with list of ordered products. Required procedures and functions are called in the background.
+
+Documentation and testing in progress...
